<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="aisles">Aisles</string>
    <string name="app_name">Efficio</string>
    <string name="create_new_store">Create new store</string>
    <string name="create_user">Create user</string>
    <string name="delete_current_store">Delete current store</string>
    <string name="edit_aisles">Edit aisles</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="no_account_sign_up">No account yet? Sign up</string>
    <string name="password">Password</string>
    <string name="rename_current_store">Rename current store</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="store">Store</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank Fragment</string>
    <string name="user">User</string>
    <string name="delete_user">Delete user</string>
    <string name="save">Save</string>
    <string name="store_name">Store name</string>
</resources>
